<resources>
    <string name="app_name">学川教育</string>
    <string name="app_content_heat">http://192.168.1.111:8080</string>
    <string name="http_video_setting">/polyvideosettings/android.json</string>
    <string name="http_url_weixin">/api/authv2/login</string>
    <string name="http_url_text">/api/test/post</string>
    <string name="http_token">/api/Service/Refresh</string>
    <string name="http_code">/api/SecurityCode/Send</string>
    <string name="http_register">/api/user/userpost</string>
    <string name="http_login">/api/userv2/login</string>
    <string name="http_getHot">/api/search/gethot</string>
    <string name="http_getHotkey">/api/search/getsearchkey</string>
    <string name="http_infom">/api/advisory/get</string>
    <string name="http_WenZhan">/api/article/get</string>
    <string name="http_HomePage">/api/homepage/get</string>
    <string name="http_refresh_token">/api/Service/Refresh</string>
    <string name="http_comment">/api/comment/post</string>
    <string name="http_laud">/api/support/post</string>
    <string name="http_favpost">/api/question/favpost</string>
    <string name="http_getarticlelistbytag">/api/Article/getarticlelistbytag</string>
    <string name="http_getarticletag">/api/Article/getarticletag</string>
    <string name="http_getresult">/api/search/getresult</string>
    <string name="http_questionhispost">/api/question/questionhispost</string>
    <string name="http_chapter">/api/standard/getchapter</string>
    <string name="http_article">/api/standard/getarticle</string>
    <string name="http_Course">/api/TextBook/GetCourse</string>
    <string name="http_jiaocaichapter">/api/textbook/getchapter</string>
    <string name="http_coursequestionids">/api/question/getcoursequestionids</string>
    <string name="http_errsetandfav">/api/question/geterrsetandfav</string>
    <string name="http_chapterquestionids">/api/question/getchapterquestionids</string>
    <string name="http_questiontags">/api/question/getquestiontags</string>
    <string name="http_questiontagscount">/api/question/getquestiontagscount</string>
    <string name="http_questiontagids">/api/question/getquestiontagids</string>
    <string name="http_articlecomment">/api/article/getarticlecomment</string>
    <string name="http_homecommentcomment">/api/article/getcommentcomment</string>
    <string name="http_datail">/api/question/getdetail</string>
    <string name="http_questioncmment">/api/question/getquestioncomment</string>
    <string name="http_getdetail">/api/article/getdetail</string>
    <string name="http_commentcomment">/api/question/getcommentcomment</string>
    <string name="http_isbought">/api/question/getisbought</string>
    <string name="http_questionidsbytagid">/api/question/getquestionidsbytagid</string>
    <string name="http_examchapter">/api/question/getexamchapter </string>
    <string name="http_getCnapter">/api/question/getchapter</string>
    <string name="http_questionremoveerrsetpost">/api/question/questionremoveerrsetpost</string>
    <string name="http_questionbankproduct">/api/question/getquestionbankproduct</string>
    <string name="http_getclassandproducts">/api/video/getclass</string>
    <string name="http_getproductdetail">/api/video/getproductdetail</string>
    <string name="http_playprogresspost">/api/video/playprogresspost</string>
    <string name="http_videodownloadpost">/api/video/videodownloadpost</string>
    <string name="http_getproduct">/api/video/getproduct</string>
    <string name="http_getVideo_evalue">/api/video/getvideocomment</string>
    <string name="http_getvideocommentcomment">/api/video/getcommentcomment</string>
    <string name="http_exchangepost">/api/exchangecode/exchangepost</string>
    <string name="http_get_sncode">/api/sncode/get</string>
    <string name="http_post_advice">/api/advice/post</string>
    <string name="http_get_order">/api/order/get</string>
    <string name="http_m_infom">/api/user/getmemberinfo</string>
    <string name="http_m_hear">/api/user/changeheadimg</string>
    <string name="http_m_submitInfom">/api/user/changememberinfo</string>
    <string name="http_m_markorder">/api/order/markorder</string>
    <string name="http_m_membernotification">/api/membernotification/get</string>
    <string name="http_my_msg">/api/membernotification/get</string>
    <string name="http_bindwechat">/api/user/bindwechat</string>
    <string name="http_out_login">/api/user/logout</string>
    <string name="http_system_msg">/api/systemnotification/get</string>
    <string name="http_deletenotify">/api/membernotification/deletenotify</string>
    <string name="http_delsystem">/api/systemnotification/deletenotify</string>
    <string name="http_changerpwd">/api/user/userchangepwdpost</string>
    <string name="http_makeorderpost">/api/order/makeorderpost</string>
    <string name="http_pay">/api/pay/post</string>
    <string name="http_upApp">/apks/appversion.json</string>
    <string name="http_youzan_hear">https://trade.youzan.com/trade/order/result?</string>
    <string name="http_youzan_tipu">kdt_id=948752</string>
    <string name="http_youzan_key">order_no</string>
    <string name="http_boli_updata">/api/errlog/post</string>
    <string name="http_setting">/configs/appsettings_android.json</string>
    <string name="http_getchapter">/api/questionv2/getchapter</string>
    <string name="http_getquestiontags">/api/questionv2/getquestiontags</string>
    <string name="http_GetCourseQuestionIds">/api/questionv2/getcoursequestionids</string>
    <string name="http_GetQuestionTagsCount">/api/questionv2/getquestiontagscount</string>
    <string name="http_GetQuestionTagIds">/api/questionv2/getquestiontagids</string>
    <string name="http_GetDetail">/api/questionv2/getdetail</string>
    <string name="http_questionshispost">/api/questionv2/questionhispost</string>
    <string name="http_loging_scan">/api/qr/scanpost</string>
    <string name="http_loging_scanconfirmpost">/api/qr/scanconfirmpost</string>
    <string name="http_currency_comment">/api/comment/getcomment</string>
    <string name="http_currency_comment_comment">/api/comment/getcommentcomment</string>
    <string name="http_video2getclass">/api/videov2/getclass</string>
    <string name="http_allAddress">/api/memberaddress/getaddress</string>
    <string name="http_create_address">/api/memberaddress/createorupdatepost</string>
    <string name="http_setdefaultaddresspost">/api/memberaddress/setdefaultaddresspost</string>
    <string name="http_deleteaddresspost">/api/memberaddress/deleteaddresspost</string>
    <string name="http_changerifon">/api/exchangecode/getexchangeinfo</string>
    <string name="http_makeVideoorderpost">/api/orderv2/makeorderpost </string>
    <string name="http_getVideov3productdetail">/api/videov3/getproductdetail</string>
    <string name="http_getdefaultaddress">/api/memberaddress/getdefaultaddress</string>
    <string name="http_getOrderdetail">/api/orderv3/getorderdetail</string>
    <string name="http_confirmaddress">/api/orderv3/confirmaddress</string>
    <string name="http_getYzOrdertrace">/api/logistics/getyzordertraces</string>
    <string name="http_get_v2order">/api/orderv3/get</string>
    <string name="http_getordertraces">/api/logistics/getordertraces </string>
    <string name="http_confirmreceive">/api/orderv2/confirmreceive </string>
    <string name="http_refund_get">/api/refund/get </string>
    <string name="http_m_v2markorder">/api/orderv2/markorder</string>
    <string name="http_oder_weixin_youzan">https://h5.youzan.com/v2/orders/all?kdt_id=948752</string>
    <string name="httP_order_waitaddressorder">/api/orderv3/getwaitaddressorder </string>
    <string name="http_order_wait_confirmaddress">/api/orderv2/confirmaddress</string>
    <string name="http_playprogresspostv2">/api/videov2/playprogresspost</string>
    <string name="http_app_home_get">/api/v2/homepage/get</string>
    <string name="http_app_home_getresult">/api/v2/search/getresult</string>
    <string name="http_app_home_getproductlist">/api/v2/product/getproductlist</string>
    <string name="http_app_home_getproductdetail">/api/v2/product/getproductdetail</string>
    <string name="http_app_home_getproductdetailcomment">/api/v2/product/getproductcomment</string>
    <string name="http_app_net_myclass">/api/v2/user/getmyclass</string>
    <string name="http_app_bank_getupgrade">/api/v2/question/getupgrade</string>
    <string name="http_app_bank_file_down">/1.4.zip</string>
    <string name="http_app_day_exercise">/api/v2/question/getdayexercise </string>
    <string name="http_app_day_exercisedetail">/api/v2/question/getdayexercisedetail</string>
    <string name="http_app_history_dayexercise">/api/v2/question/gethistorydayexercise</string>
    <string name="http_app_submit_day_exrcise">/api/v2/question/DayExerciseResultPost</string>
    <string name="http_app_day_paihang">/api/v2/question/getdayexerciseranking</string>
    <string name="http_app_questionnotpost">/api/v2/question/questionnotepost</string>
    <string name="http_app_question_notecount">/api/v2/question/getquestionnotecount</string>
    <string name="http_app_question_notelist">/api/v2/question/getquestionnote</string>
    <string name="http_app_quesiton_delete_note">/api/v2/question/deletequestionnotepost</string>
    <string name="http_app_WrongQuestionPost">/api/v2/question/WrongQuestionPost</string>
    <string name="http_app_FavoritePost">/api/v2/question/FavoritePost</string>
    <string name="http_app_QuestionQueuePost">/api/v2/question/QuestionQueuePost</string>
    <string name="http_app_GetQuestionDoneQueue">/api/v2/question/GetQuestionDoneQueue</string>
    <string name="http_app_GetExamHistory">/api/v2/question/GetExamHistory</string>
    <string name="http_app_GetExamHistoryDetail">/api/v2/question/GetExamHistoryDetail</string>
    <string name="http_app_DeleteExamHistoryPost">/api/v2/question/DeleteExamHistoryPost</string>
    <string name="http_app_exampost">/api/v2/question/exampost</string>
    <string name="http_app_getnotebyquestion">/api/v2/question/GetNoteByQuestion</string>
    <string name="http_app_questionpost">/api/v2/question/questionhispost</string>
    <string name="http_app_geterrorsetquestion">/api/v2/question/GetErrorSetQuestion</string>
    <string name="http_app_GetFavoriteQuestion">/api/v2/question/GetFavoriteQuestion</string>
    <string name="http_app_getWaitproblem">/api/v1/problem/getwaitproblem</string>
    <string name="http_app_submit_problem">/api/v1/problem/problempost</string>
    <string name="http_app_gethankpickproblem">/api/v1/problem/getselectionproblem</string>
    <string name="http_app_getmyproblem">/api/v1/problem/GetMyProblem</string>
    <string name="http_app_problemdetail">/api/v1/problem/GetProblemDetail</string>
    <string name="http_app_submit_probleevalues">/api/v1/problem/ProblemJudgePOST</string>
    <string name="http_app_answer_tag">/configs/problemtags.json</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tv_search_history">历史记录</string>
    <string name="host_nominate">热门推荐</string>
    <string name="home_teacherMateri">教材</string>
    <string name="home_specs">规范</string>
    <string name="special_practice">专项练习</string>
    <string name="delect">删除</string>
    <string name="analyze">解析</string>
    <string name="shaop">商城</string>
    <string name="do_number">已做题数</string>
    <string name="all_number">总题数</string>
    <string name="favorite_list">收藏夹</string>
    <string name="dao">道</string>
    <string name="collect">收藏</string>
    <string name="syn">最近同步</string>
    <string name="case_anslysis">案例分析</string>
    <string name="sysable">综合能力</string>
    <string name="skill">技术实务</string>
    <string name="error_question">错题</string>
    <string name="book">科目</string>
    <string name="now_sys">立即同步</string>
    <string name="again_exam">重做</string>
</resources>