<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_do_case_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/text_fu_color"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_number"
                android:textColor="@color/text_fu_color"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_all_case_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/text_fu_color"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/tv_do_case_allnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_number"
                android:textColor="@color/text_fu_color"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_case_special_layout"
        android:layout_marginTop="@dimen/space_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_100"
        android:background="@color/bank_new_bg"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/space_10"
        android:paddingLeft="@dimen/space_16"
        android:paddingRight="@dimen/space_16"
        android:paddingTop="@dimen/space_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/speca_105dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/space_16">

            <ImageView
                android:layout_width="@dimen/space_40"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/qb_zhuanxiang" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/space_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/special_practice"
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="@dimen/space_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="专题强化突破"
                    android:textColor="@color/text_fu_color"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_case_exam_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_100"
        android:background="@color/bank_new_bg"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/space_10"
        android:paddingLeft="@dimen/space_16"
        android:paddingRight="@dimen/space_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/speca_105dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/space_16">

            <ImageView
                android:layout_width="@dimen/space_40"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/qb_moni" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/space_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="模拟考试"
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="@dimen/space_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="全真试题演练"
                    android:textColor="@color/text_fu_color"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_banknew_favaoite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_48"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/space_8"
        android:paddingTop="@dimen/space_8"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/space_16"
        android:paddingRight="@dimen/space_16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/qb_shcj"
            android:drawablePadding="@dimen/space_4"
            android:text="@string/favorite_list" />

        <TextView
            android:id="@+id/tv_banknew_favorite_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/space_2"
            android:text="0"
            android:textColor="@color/text_fu_color"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/space_8"
            android:drawableRight="@mipmap/ic_more_go"
            android:text="@string/dao"
            android:textColor="@color/text_fu_color"
            android:textSize="@dimen/text_size_12" />
    </LinearLayout>
</LinearLayout>